--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,6 @@
 /* Raleway 700 */
 /* Roboto 400(regular) 500(medium) 700(bold) 900(extra bold)*/
 
-/* primary text color */
-/* secondary text */
-/* accent text */
-
 /* color bg hero + footer black #2F303A */
 /* accent color blue logo + blue filter + hover #2196F3 but blue hero button #188CE8 */
 /* logo  text color black #000000 */
@@ -19,114 +15,155 @@
 /* Custom  properties*/
 :root {
   --primary-text-color: #757575;
+  --secondary-text-color: #212121;
+  --accent-color: #2196f3;
 }
-
 /* for all elements in body */
 body {
-  background-color: #f5f5f5;
-  color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
+
+  background-color: #ffffff;
+  color: var(--primary-text-color);
+}
+.btn {
+  cursor: pointer;
+}
+button {
+  font-family: inherit;
+
+  background-color: #f5f4fa;
 }
 /* No bullets */
 .list {
   list-style: none;
 }
-
-.link:hover,
-.link:focus {
-  color: #2196f3;
+/* Link decoration */
+a {
+  text-decoration: none;
+  font-style: normal;
 }
-
-.btn:hover,
-.btn:focus {
-  background-color: #2196f3;
-  color: #ffffff;
+/* Logo */
+.logo-blue {
+  color: var(--accent-color);
 }
-
-.btn {
-  cursor: pointer;
-}
-button {
-    font-family: inherit;
-}
-
-/* Black color for the logo !!!! blue add later with a span */
 .logo {
-  color: #000000;
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
-}
+  text-decoration: none;
 
+  color: #000000;
+}
 /* Navigation */
 .site-nav .link {
-  color: #212121;
   font-weight: 500;
   line-height: 1.15;
   letter-spacing: 0.02em;
-}
 
+  color: var(--secondary-text-color);
+}
 .site-nav .link.current {
-  color: #2196f3;
+  color: var(--accent-color);
 }
-
-.address {
+.address .link {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
-}
 
+  color: var(--primary-text-color);
+}
 /* Hero */
+.hero {
+  background-color: #2f303a;
+}
 .hero-title {
-  color: #ffffff;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.4;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-}
 
-.btn-hero {
-  background-color: #188ce8;
   color: #ffffff;
+}
+.btn-hero {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.06em;
-}
-/* Section */
-.section-title {
-  color: #212121;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
-l   etter-spacing: 0.03em;
-}
 
-.feature-list .title {
-  color: #212121;
+  background-color: #188ce8;
+  color: #ffffff;
+}
+/* Sections */
+.section-title {
   font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--secondary-text-color);
+}
+.feature-list .title {
+  font-weight: 700;
+  font-size: 14px;
   line-height: 1.14px;
   text-transform: uppercase;
   letter-spacing: 0.03em;
+
+  color: var(--secondary-text-color);
 }
+.team .title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
 
-.section .title {
-color: #212121;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.19;
-letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
 }
+.team p {
+  font-size: 16px;
+  line-height: 1.9;
+}
+/*Portfolio */
+.project-list .title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 
-.footer a {
-    color:#ffffff
-
+  color: var(--secondary-text-color);
+}
+.project-list .text {
+  font-size: 16px;
+  line-height: 1.9;
+  color: var(--primary-text-color);
+}
+/* Footer */
+.footer .link {
+  color: rgba(255, 255, 255, 0.6);
+}
+.link.physical-address {
+  color: #ffffff;
+}
+.footer .logo {
+  color: #ffffff;
+}
+.footer {
+  background-color: #2f303a;
+}
+.link:hover,
+.link:focus {
+  color: var(--accent-color);
+}
+.btn:hover,
+.btn:focus {
+  background-color: var(--accent-color);
+  color: #ffffff;
 }
