--- a/css/styles.css
+++ b/css/styles.css
@@ -17,19 +17,21 @@
   --primary-text-color: #757575;
   --secondary-text-color: #212121;
   --accent-color: #2196f3;
-  --white-color: #ffffff;
-  --black-color: #000000;
+  --background-color: #ffffff;
+  --logo-color: #000000;
   --filterbutton-color: #f5f4fa;
   --herobutton-color: #188ce8;
   --footer-color: #2f303a;
+  --hero-bg: #c4c4c4;
+  --address--footer-color-color: rgba(255, 255, 255, 0.6);
 }
-/* for all elements in body */
+/* For all elements in body */
 body {
   font-family: Roboto, sans-serif;
   font-weight: 400;
   letter-spacing: 0.03em;
 
-  background-color: var(--white-color);
+  background-color: var(--background-color);
   color: var(--primary-text-color);
 }
 .btn {
@@ -55,7 +57,7 @@ a {
   line-height: 1.2;
   text-decoration: none;
 
-  color: var(--black-color);
+  color: var(--logo-color);
 }
 /* Navigation */
 .site-nav .link {
@@ -77,7 +79,7 @@ a {
 }
 /* Hero */
 .hero {
-  background-color: var(--footer-color);
+  background-color: var(--hero-bg);
 }
 .hero-title {
   font-weight: 900;
@@ -87,7 +89,7 @@ a {
   letter-spacing: 0.06em;
   text-transform: uppercase;
 
-  color: var(--white-color);
+  color: var(--background-color);
 }
 .btn-hero {
   font-weight: 700;
@@ -96,7 +98,7 @@ a {
   letter-spacing: 0.06em;
 
   background-color: var(--herobutton-color);
-  color: var(--white-color);
+  color: var(--background-color);
 }
 /* Sections */
 .section-title {
@@ -130,6 +132,18 @@ a {
   line-height: 1.9;
 }
 /*Portfolio */
+
+/* Filter */
+button {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
+  background-color: var(--filterbutton-color);
+}
 .project-list .title {
   font-weight: 700;
   font-size: 18px;
@@ -143,30 +157,21 @@ a {
   line-height: 1.9;
   color: var(--primary-text-color);
 }
-/* Filter */
-button {
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--secondary-text-color);
-  background-color: var(--filterbutton-color);
-}
+
 /* Footer */
 .footer .link {
-  color: rgba(255, 255, 255, 0.6);
+  color: var(--address-color);
 }
 .link.street-address {
-  color: var(--white-color);
+  color: var(--background-color);
 }
 .footer .logo {
-  color: var(--white-color);
+  color: var(--background-color);
 }
 .footer {
   background-color: var(--footer-color);
 }
+/* Hover */
 .link:hover,
 .link:focus {
   color: var(--accent-color);
@@ -174,5 +179,5 @@ button {
 .btn:hover,
 .btn:focus {
   background-color: var(--accent-color);
-  color: var(--white-color);
+  color: var(--background-color);
 }
