--- a/css/styles.css
+++ b/css/styles.css
@@ -38,56 +38,19 @@ body {
   cursor: pointer;
 }
 /* No bullets */
-.list,
-.item {
+.list {
   list-style: none;
-}
-h1,
-h2,
-h3,
-ul,
-p {
-  margin: 0;
-  padding: 0;
 }
 /* Link decoration */
 a {
   text-decoration: none;
   font-style: normal;
 }
-/* Hover */
-a:hover,
-a:focus {
-  color: var(--accent-color);
-  outline: none;
-}
-.btn:hover,
-.btn:focus {
-  background-color: var(--accent-color);
-  color: var(--background-color);
-  outline: none;
-}
-.container {
-  width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-.flex-container {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-header {
-  border-bottom: 1px solid #ececec;
-}
 /* Logo */
 .logo-accent {
   color: var(--accent-color);
 }
 .logo {
-  margin: 25px 0;
-  margin-right: 93px;
-
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -97,71 +60,32 @@ header {
   color: var(--logo-color);
 }
 /* Navigation */
-.site-nav .link,
-.address .link {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  font-size: 14px;
+.site-nav .link {
   font-weight: 500;
   line-height: 1.15;
   letter-spacing: 0.02em;
 
   color: var(--secondary-text-color);
 }
-.site-nav .item:not(:last-child) {
-  margin-right: 50px;
-}
 .site-nav .link.current {
   color: var(--accent-color);
 }
-.contacts {
-  margin-left: auto;
-}
 .address .link {
-  color: var(--primary-text-color);
-}
-.address + .address {
-  margin-left: 50px;
-}
-/* Sections */
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-.section-title {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 
-  color: var(--secondary-text-color);
-}
-.visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
+  color: var(--primary-text-color);
 }
 /* Hero */
 .hero {
-  min-height: 600px;
-  text-align: center;
-
   background-color: var(--hero-bg);
 }
 .hero-title {
-  margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.4;
+  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 
@@ -175,71 +99,25 @@ header {
 
   background-color: var(--herobutton-color);
   color: var(--background-color);
-  border: none;
-  border-radius: 4px;
-  padding: 10px 32px;
 }
-/* Features*/
-.section.feature-list {
-  padding-bottom: 0px;
-}
-/* .feature-list.flex-container {
-  align-items: flex-start;
-} */
-.feature-list .item {
-  width: 270px;
-  min-height: 98px;
-}
-.feature-list .item:not(:last-child) {
-  margin-right: 30px;
-}
-.feature-list .title {
+/* Sections */
+.section-title {
   font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
   letter-spacing: 0.03em;
 
   color: var(--secondary-text-color);
 }
-.feature-list p {
+.feature-list .title {
+  font-weight: 700;
   font-size: 14px;
-  line-height: 1.7;
-  margin-top: 10px;
-  padding: 0;
-}
-/* Tasks */
-.task-photo:not(:last-child) {
-  margin-right: 30px;
-}
-/* Team */
-section.team {
-  background: var(--filterbutton-color);
-}
-.team-card {
-  border-radius: 4px 0px;
-  background: var(--background-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  text-align: center;
-}
-.team-item:not(:last-child) {
-  margin-right: 30px;
-}
-.team h3 {
-  margin-top: 30px;
-
-  font-weight: 500;
-  font-size: 16px;
+  line-height: 1.14px;
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
 
   color: var(--secondary-text-color);
-}
-.team p {
-  margin-top: 10px;
-  padding-bottom: 30px;
-
-  font-size: 16px;
-  line-height: 1.9;
 }
 .team .title {
   font-weight: 500;
@@ -249,43 +127,24 @@ section.team {
 
   color: var(--secondary-text-color);
 }
+.team p {
+  font-size: 16px;
+  line-height: 1.9;
+}
 /*Portfolio */
 
 /* Filter */
-.filter {
-  margin-bottom: 50px;
-}
-.filter .flex-container {
-  justify-content: center;
-}
-.btn-filter {
-  min-height: 38px;
-  border-radius: 4px;
-  border: none;
-  padding: 6px 22px;
-
+button {
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
-
   color: var(--secondary-text-color);
   background-color: var(--filterbutton-color);
 }
-.filter .item:not(:last-child) {
-  margin-right: 8px;
-}
-/* Projects */
-.project-list .flex-container {
-  flex-wrap: wrap;
-}
 .project-list .title {
-  margin-top: 20px;
-  margin-left: 24px;
-  margin-bottom: 4px;
-
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -297,21 +156,8 @@ section.team {
   font-size: 16px;
   line-height: 1.9;
   color: var(--primary-text-color);
-  margin-bottom: 20px;
-  margin-left: 24px;
 }
-/* calc = 100% (from parent)-sum of the margins in the line -1 
-  / the number of the elements in the line */
-.project-list .item {
-  border: 1px solid #eeeeee;
-  width: calc((100% - (30px * 2)) / 3);
-}
-.project-list .item:not(:nth-child(3n)) {
-  margin-right: 30px;
-}
-.project-list .item:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 30px;
-}
+
 /* Footer */
 .footer .link {
   color: var(--address-color);
@@ -324,23 +170,6 @@ section.team {
 }
 .footer {
   background-color: var(--footer-color);
-}
-.link.address {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7;
-}
-.footer .logo {
-  display: inline-block;
-  padding-top: 60px;
-  margin-bottom: 20px;
-  color: var(--background-color);
-}
-footer .list:not(:last-child) {
-  margin-bottom: 9px;
-}
-address {
-  padding-bottom: 60px;
 }
 /* Hover */
 .link:hover,
